Add NetTopologySuite to SyntheticLife.Core

--- a/SyntheticLife.Core/SyntheticLife.Core.csproj
+++ b/SyntheticLife.Core/SyntheticLife.Core.csproj
@@ -9,4 +9,8 @@
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NetTopologySuite" Version="2.4.0" />
+  </ItemGroup>
+
 </Project>
