--- a/SyntheticLife.Core/SyntheticLife.Core.csproj
+++ b/SyntheticLife.Core/SyntheticLife.Core.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" Version="4.0.1" />
     <PackageReference Include="NetTopologySuite" Version="2.4.0" />
   </ItemGroup>
 
